--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.10.1",
-    "apollo-server-lambda": "^2.10.1"
+    "apollo-server-lambda": "^2.10.1",
+    "apollo-datasource-rest": "^3.2.0",
   }
 }
