--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   "dependencies": {
     "apollo-server": "^2.10.1",
     "apollo-server-lambda": "^2.10.1",
-    "apollo-datasource-rest": "^3.2.0",
+    "apollo-datasource-rest": "^3.2.0"
   }
 }
