--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "apollo-datasource-rest": "^3.2.0",
     "apollo-server": "^2.10.1",
-    "apollo-server-lambda": "^2.10.1",
-    "apollo-datasource-rest": "^3.2.0"
+    "apollo-server-lambda": "^2.10.1"
   }
 }
